--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.1||~8.0",
         "yiisoft/yii2": "~2.0.13",
         "spatie/async": "~1.0.0"
     },
